chore: clean up whitespace and minor fixes in controller and tests
Co-Authored-By: claude-flow <ruv@ruv.net>